cha-pre-live-flux2/cha-eks-5b/namespaces/ensftp-performance/namespace-ensftp-performance.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ensftp-performance
  name: ensftp-performance
